# remote-blinky

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
src/: button.rs  led.rs  main.rs
