[package]
name = "remote-blinky"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
nrf52840-pac = { version = "0.12.2", features = ["cortex-m-rt"] }
rtt-target = "0.4.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
embedded-hal = "1.0.0"
nrf52840-hal = {path = "../nrf-hal/nrf52840-hal"}
nb = "1.1.0"
